# ai-chatbot-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  OUTREACH.md  PROPOSALS.md  PUBLISH.md  Procfile  README.md  UPWORK_PORTFOLIO.md  VIDEO_SCRIPT.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  upwork_description.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  observability.py
app/api/: admin.py  chat.py  deps.py  escalate.py  health.py  widget.py
app/core/: claude.py  rag.py  reranker.py  retrieval.py  vectorstore.py
app/db/: database.py
app/ingestion/: chunking.py  loaders.py  pipeline.py
app/models/: schemas.py
app/services/: chat_service.py  escalation_service.py
data/knowledge_base/hotel/: 01_general.md  02_rooms_and_rates.md  03_amenities.md  04_dining_and_neighbourhood.md  05_faq.md
data/knowledge_base/law/: 01_about_the_firm.md  02_practice_areas.md  03_pricing_and_intake.md  04_document_checklists.md  05_faq.md
demo/: index.html
demo/admin/: index.html
demo/hotel/: index.html
demo/law/: index.html
deploy/: README.md  fly.toml  railway.json  render.yaml
screenshots/: README.md
scripts/: capture_screenshots.py  seed_demo_chats.py  seed_knowledge_base.py
tests/: conftest.py  test_api.py  test_chunking.py  test_config.py  test_database.py  test_deps.py  test_features.py  test_loaders.py  test_observability.py  test_pipeline.py  test_rag.py  test_security.py
widget/: README.md  chat-widget.js
